deployments/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
   ingressClassName: nginx
   rules:
   - host: dashboard.tomb.local
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: dashboard-kubernetes-dashboard-web
             port:
               number: 8000
   tls:
   - hosts:
     - dashboard.tomb.local
     secretName: tomb.local
