deployments/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
   ingressClassName: nginx
   rules:
   - host: grafana.tomb.local
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: grafana
             port:
               number: 3000
   tls:
   - hosts:
     - grafana.tomb.local
     secretName: tomb.local
