deployments/web1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
        - name: banana-app
          image: hashicorp/http-echo
          args:
            - "-text=banana"

---
kind: Service
apiVersion: v1
metadata:
  name: web1
spec:
  selector:
    app: web1
  ports:
    - port: 5678

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web1
  #namespace: argodeploy
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
   ingressClassName: nginx
   rules:
   - host: web1.tomb.local
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: web1
             port:
               name: http
   tls:
   - hosts:
     - web1.tomb.local
     secretName: tomb.local
